{
    "name": "MyGameInput",
    "maps": [
        {
            "name": "MainPlayer",
            "id": "96e7b7e3-7134-4632-9015-b8c735a461ed",
            "actions": [
                {
                    "name": "MoveLeftRight",
                    "type": "Value",
                    "id": "df7405a6-87b2-43ac-be07-24a344eb4637",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c5247f02-da5f-4b0d-a046-3bd029c22f22",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D  Keyboard",
                    "id": "9481c92f-4939-4483-84fd-cd83ebe0bb38",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3d458f1a-dc56-4cef-889e-c94edeedc27a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7e2d224a-3b92-4433-b089-4119e76035b7",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D  Keyboard",
                    "id": "c8f80d32-2623-4733-9c71-35959f96dddb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d1266e78-7e69-4587-bfbb-63e8cf466022",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9c1ee593-99f0-49ea-9623-fadaa2b99dad",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}